--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -25,7 +25,7 @@
 	}
 
 	&__logo {
-		display: flex;
+		display: inline-flex;
 		align-items: center;
 		transition: all 0.3s ease;
 	}
@@ -49,9 +49,16 @@
 	}
 }
 .menu {
-	&__list {
-		display: flex;
-		justify-content: center;
+	&__arrow {
+		position: absolute;
+		border: solid #fff;
+		border-width: 0 1px 1px 0;
+		display: inline-block;
+		padding: 2px;
+		transform: rotate(45deg);
+		right: -10px;
+		top: 43%;
+		transition: all 0.3s ease;
 	}
 	&__sublist {
 		position: absolute;
@@ -59,12 +66,8 @@
 		background-color: #000;
 		right: 0;
 		padding: 15px;
-		min-width: 200px;
-		transform: translate(0px, 10%);
-		opacity: 0;
-		visibility: hidden;
-		transition: all 0.3s ease;
-		pointer-events: none;
+		min-width: 150px;
+		text-align: center;
 	}
 
 	&__item {
@@ -86,16 +89,16 @@
 		position: relative;
 		transition: all 0.3s ease;
 		&-arrow {
-			&::before {
-				content: "";
-				position: absolute;
-				top: 50%;
-				transform: translate(0, -100%);
-				right: -11px;
-				width: 6px;
-				height: 4px;
-				background: url("../img/icons/arrow_down.png") 0 0 no-repeat;
-			}
+			// &::before {
+			// 	content: "";
+			// 	position: absolute;
+			// 	top: 50%;
+			// 	transform: translate(0, -100%);
+			// 	right: -11px;
+			// 	width: 6px;
+			// 	height: 4px;
+			// 	background: url("../img/icons/arrow_down.png") 0 0 no-repeat;
+			// }
 		}
 		&::after {
 			content: "";
@@ -112,10 +115,12 @@
 	&__sublink {
 		color: #ffffff;
 		font-weight: 600;
-		line-height: 375%;
-		display: block;
+		line-height: 110%;
+		display: inline-block;
 		position: relative;
 		transition: all 0.3s ease;
+		@include adaptiv-value("padding-bottom", 15, 5, 0);
+		text-align: center;
 		&-arrow {
 			&::before {
 				content: "";
