--- a/src/scss/media/_header_media.scss
+++ b/src/scss/media/_header_media.scss
@@ -89,17 +89,147 @@ body.touch .menu__list > .menu__item.active .menu__arrow {
 		}
 	}
 }
-@media (max-width: 1074.98px) {
-}
-@media (max-width: 991.98px) {
-}
-
-@media (max-width: 767.98px) {
+@media (max-width: 1108.98px) {
+	.header {
+		&__column {
+			&:first-child {
+				flex: 0 0 50%;
+				text-align: right;
+			}
+			flex: 0 0 0%;
+			&:last-child {
+				flex: 0 0 50%;
+			}
+		}
+	}
+	.menu {
+		&__arrow{
+			padding: 6px;
+			border-width: 0 3px 3px 0;
+		}
+		&__icon {
+			display: block;
+			z-index: 5;
+			position: absolute;
+			width: 30px;
+			height: 18px;
+			@include adaptiv-value("top", 50, 30, 0);
+			@include adaptiv-value("left", 30, 20, 0);
+			cursor: pointer;
+			&::before,
+			&::after,
+			span {
+				position: absolute;
+				left: 0;
+				height: 10%;
+				width: 100%;
+				transition: all 0.3s ease;
+				background-color: #fff;
+			}
+			&::before,
+			&::after {
+				content: "";
+			}
+			&::before {
+				top: 0;
+			}
+			&::after {
+				bottom: 0;
+			}
+			span {
+				top: 50%;
+				transform: scale(1) translate(0, -50%);
+			}
+			&.active{
+				&::after{
+					bottom: 50%;
+					transform: rotate(45deg) translate(0, 50%);
+				}
+				&::before{
+					top: 50%;
+					transform: rotate(-45deg) translate(0, -50%);
+				}
+				span{
+					transform: scale(0) translate(0, -50%);
+				}
+			}
+		}
+		&__body {
+			overflow: auto;
+			position: fixed;
+			top: 0;
+			right: -100%;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.9);
+			transition: all 0.3s ease-in;
+			@include adaptiv-value("padding-top", 150, 70, 0);
+			@include adaptiv-value("padding-right", 30, 15, 0);
+			@include adaptiv-value("padding-left", 30, 15, 0);
+			@include adaptiv-value("padding-bottom", 13, 5, 0);
+			&::before {
+				content: "";
+				position: fixed;
+				width: 100%;
+				top: 0;
+				left: 0;
+				@include adaptiv-value("min-height", 125, 70, 0);
+				background-image: linear-gradient(45deg, #603fcd 0%, #4475dc 100%);
+				z-index: 2;
+			}
+			&.active{
+				right: 0;
+			}
+		}
+		&__list {
+			.menu__item {
+				flex-wrap: wrap;
+			}
+			.menu__item {
+				&.active {
+					.menu__sublist {
+						display: block;
+					}
+				}
+			}
+		}
+		&__link {
+			font-size: 24px;
+			line-height: 260%;
+		}
+		&__sublist {
+			position: relative;
+			background-color: #fff;
+			flex: 1 1 100%;
+			display: none;
+		}
+		&__sublink {
+			color: #000;
+		}
+	}
+	body.touch .menu__list > .menu__item.active .menu__arrow {
+		top: 15%;
+	}
 }
 
 @media (max-width: 575.98px) {
+	.header{
+		&__text{
+			display: none;
+		}
+		&__column{
+			&:first-child {
+				flex: 0 0 35%;
+				text-align: right;
+			}
+			flex: 0 0 0%;
+			&:last-child {
+				flex: 1 1 100%;
+			}
+		}
+	}
 }
-@media (min-width: 1074.98px) {
+@media (min-width: 1108.98px) {
 	.menu {
 		&__list {
 			display: flex;
