--- a/src/scss/media/_header_media.scss
+++ b/src/scss/media/_header_media.scss
@@ -174,7 +174,7 @@ body.touch .menu__list > .menu__item.active .menu__arrow {
 				top: 0;
 				left: 0;
 				@include adaptiv-value("min-height", 125, 70, 0);
-				background-image: linear-gradient(45deg, #603fcd 0%, #4475dc 100%);
+				background-color: rgba(0, 0, 0, 0.5);
 				z-index: 2;
 			}
 			&.active{
