--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "base/null.scss";
 @import "base/fonts";
 @import "base/mixins";
+@import "base/links";
 
 * {
 	font-family: "Poppins", sans-serif;
@@ -24,7 +25,9 @@ body.lock{
 }
 
 @import "blocks/header";
+@import "blocks/intro";
 @import "blocks/footer";
 
 @import "media/header_media";
+@import "media/intro_media";
 @import "media/footer_media";
