--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -1,11 +1,15 @@
 .price {
-	@include adaptiv-value("padding-top", 280, 30, 0);
-	@include adaptiv-value("padding-bottom", 280, 30, 0);
+	@include adaptiv-value("padding-top", 270, 50, 0);
+	@include adaptiv-value("padding-bottom", 270, 50, 0);
 	&__container {
 	}
 
+	&__header {
+		@include adaptiv-value("margin-bottom", 55, 20, 0);
+	}
+
 	&__title {
-		@include adaptiv-value("margin-bottom", 20, 15, 0);
+		@include adaptiv-value("margin-bottom", 20, 10, 0);
 	}
 
 	&__text {
@@ -14,7 +18,6 @@
 		text-align: center;
 		max-width: 780px;
 		margin: 0px auto;
-		@include adaptiv-value("margin-bottom", 50, 20, 0);
 	}
 
 	&__row {
@@ -22,59 +25,50 @@
 		margin: 0px -15px;
 	}
 
-	&__item {
+	&__column {
 		flex: 0 0 25%;
 		padding: 0px 15px;
+		min-width: 0;
+	}
+
+	&__item {
 	}
 }
 
 .item-price {
-	&__body {
-		display: flex;
-		flex-direction: column;
+	background-color: #292a3c;
+	border-radius: 11px;
+	position: relative;
+	&::after {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 73px;
 		background-color: #292a3c;
 		box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
-		border-radius: 15px 15px 0 0;
-		height: 100%;
+		border-radius: 11px 11px 0 0;
+		top: 0;
+		left: 0;
+	}
+	&__body {
 		@include adaptiv-value("padding-top", 30, 15, 0);
 		@include adaptiv-value("padding-right", 30, 15, 0);
+		@include adaptiv-value("padding-bottom", 30, 15, 0);
 		@include adaptiv-value("padding-left", 30, 15, 0);
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			height: 73px;
-			top: 0;
-			left: 0;
-			background-color: #292a3c;
-			box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
-			border-radius: 15px 15px 0 0;
-		}
 	}
-
 	&__icon {
 		text-align: center;
-		@include adaptiv-value("margin-bottom", 15, 7, 0);
 		position: relative;
 		z-index: 1;
-		img {
-			max-width: 100%;
-		}
 	}
 
-	&__row-top {
-		display: flex;
-		font-weight: 500;
-		color: #ffffff;
-		justify-content: space-between;
-		@include adaptiv-value("margin-bottom", 10, 7, 0);
+	&__header {
 	}
 
-	&__title {
+	&__currency {
 	}
 
-	&__price {
+	&__volume {
 	}
 
 	&__tabs {
@@ -83,73 +77,44 @@
 	&__footer {
 	}
 }
-.tabs-item-price {
-	flex: 1 1 auto;
-	&__body {
-	}
-
+.tabs-price {
 	&__content {
 	}
 
-	&__header {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	&__navitem {
-		cursor: pointer;
-		font-size: 12px;
-		color: #9d9da6;
-		&.active {
-			color: #ffffff;
-			background-color: #383950;
-			border-radius: 11px;
-			padding: 6px 11px;
-		}
+	&__tab {
 	}
 }
-.content-item {
-	&__row {
-		text-transform: uppercase;
-		display: flex;
-		justify-content: space-between;
-		@include adaptiv-value("margin-bottom", 10, 7, 0);
+.content-price {
+	&__header {
 	}
 
-	&__title {
-		font-size: 10px;
-		color: #9d9da6;
+	&__currency {
 	}
 
-	&__percent {
-		font-size: 10px;
-		color: #f02e23;
+	&__volume {
 	}
 
-	&__img {
+	&__chart {
 		padding: 0px 0px 47.83% 0px;
-		@include adaptiv-value("margin-bottom", 10, 7, 0);
+	}
+}
+
+.tab-nav-price {
+	&__item {
 	}
 }
 
 .footer-price {
-	background-color: #3d3e53;
-	border-radius: 0 0 15px 15px;
-	display: flex;
-	justify-content: space-between;
-	@include adaptiv-value("padding-top", 12, 7, 0);
+	background-color: #303146;
+	border-radius: 0 0 11px 11px;
+	box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
+	@include adaptiv-value("padding-top", 10, 7, 0);
 	@include adaptiv-value("padding-right", 30, 15, 0);
-	@include adaptiv-value("padding-bottom", 12, 7, 0);
+	@include adaptiv-value("padding-bottom", 10, 7, 0);
 	@include adaptiv-value("padding-left", 30, 15, 0);
-	&__title {
-		font-size: 12px;
-		color: #9d9da6;
+	&__text {
 	}
 
-	&__price {
-		font-size: 12px;
-		font-weight: 500;
-		color: #ffffff;
+	&__volume {
 	}
 }
