--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,4 +38,5 @@ body.lock {
 
 @import "media/header_media";
 @import "media/intro_media";
+@import "media/price_media";
 @import "media/footer_media";
