--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -1,10 +1,9 @@
 .price {
-	@include adaptiv-value("padding-top", 270, 50, 0);
-	@include adaptiv-value("padding-bottom", 270, 50, 0);
-	&__container {
-	}
+	@include adaptiv-value("padding-top", 250, 50, 0);
+	@include adaptiv-value("padding-bottom", 250, 50, 0);
 
 	&__header {
+		text-align: center;
 		@include adaptiv-value("margin-bottom", 55, 20, 0);
 	}
 
@@ -15,14 +14,15 @@
 	&__text {
 		line-height: 162.5%;
 		color: #9b9b9e;
-		text-align: center;
 		max-width: 780px;
 		margin: 0px auto;
 	}
 
 	&__row {
 		display: flex;
+		justify-content: space-between;
 		margin: 0px -15px;
+		min-width: 0;
 	}
 
 	&__column {
@@ -32,89 +32,125 @@
 	}
 
 	&__item {
+		background-color: #292a3c;
 	}
 }
 
 .item-price {
-	background-color: #292a3c;
-	border-radius: 11px;
+	border-radius: 6px;
 	position: relative;
+	box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 	&::after {
 		content: "";
 		position: absolute;
 		width: 100%;
-		height: 73px;
-		background-color: #292a3c;
-		box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
-		border-radius: 11px 11px 0 0;
+		@include adaptiv-value("height", 73, 50, 0);
 		top: 0;
 		left: 0;
+		background-color: #292a3c;
+		box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
+		border-radius: 6px 6px 0 0;
 	}
-	&__body {
-		@include adaptiv-value("padding-top", 30, 15, 0);
-		@include adaptiv-value("padding-right", 30, 15, 0);
-		@include adaptiv-value("padding-bottom", 30, 15, 0);
-		@include adaptiv-value("padding-left", 30, 15, 0);
+	&__wrapper {
+		flex: 1 1 auto;
+		@include adaptiv-value("padding-top", 30, 10, 0);
+		@include adaptiv-value("padding-right", 30, 10, 0);
+		@include adaptiv-value("padding-bottom", 30, 10, 0);
+		@include adaptiv-value("padding-left", 30, 10, 0);
 	}
 	&__icon {
 		text-align: center;
+		@include adaptiv-value("margin-bottom", 15, 7, 0);
 		position: relative;
 		z-index: 1;
+		img {
+			max-width: 100%;
+		}
 	}
 
 	&__header {
-	}
-
-	&__currency {
+		font-weight: 500;
+		color: #ffffff;
+		display: flex;
+		justify-content: space-between;
+		@include adaptiv-value("margin-bottom", 10, 7, 0);
 	}
 
 	&__volume {
+		display: flex;
+		span {
+			font-size: 11px;
+			margin: 0px 2px 0px 0px;
+		}
+	}
+}
+.body-item-price {
+	&__header {
+		font-size: 10px;
+		text-transform: uppercase;
+		display: flex;
+		justify-content: space-between;
+		@include adaptiv-value("margin-bottom", 10, 7, 0);
+	}
+
+	&__currency {
+		color: #9d9da6;
+	}
+
+	&__percent {
+		color: #f02e23;
+		&-green {
+			color: #3bf023;
+		}
+	}
+
+	&__img {
+		padding: 0px 0px 47.87% 0px;
+		@include adaptiv-value("margin-bottom", 10, 7, 0);
 	}
 
 	&__tabs {
-	}
-
-	&__footer {
-	}
-}
-.tabs-price {
-	&__content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 
 	&__tab {
-	}
-}
-.content-price {
-	&__header {
-	}
-
-	&__currency {
-	}
-
-	&__volume {
-	}
-
-	&__chart {
-		padding: 0px 0px 47.83% 0px;
-	}
-}
-
-.tab-nav-price {
-	&__item {
+		cursor: pointer;
+		font-size: 12px;
+		color: #9d9da6;
+		&.active {
+			color: #ffffff;
+			background-color: #383950;
+			border-radius: 11px;
+			padding: 6px 12px;
+			@include adaptiv-value("padding-top", 6, 3, 0);
+			@include adaptiv-value("padding-right", 12, 6, 0);
+			@include adaptiv-value("padding-bottom", 6, 3, 0);
+			@include adaptiv-value("padding-left", 12, 6, 0);
+		}
 	}
 }
 
 .footer-price {
 	background-color: #303146;
-	border-radius: 0 0 11px 11px;
-	box-shadow: 0px 16px 28px 0px rgba(23, 23, 34, 0.31);
-	@include adaptiv-value("padding-top", 10, 7, 0);
+	font-size: 12px;
+	display: flex;
+	justify-content: space-between;
+	border-radius: 0 0 6px 6px;
+	@include adaptiv-value("padding-top", 10, 5, 0);
 	@include adaptiv-value("padding-right", 30, 15, 0);
-	@include adaptiv-value("padding-bottom", 10, 7, 0);
+	@include adaptiv-value("padding-bottom", 10, 5, 0);
 	@include adaptiv-value("padding-left", 30, 15, 0);
 	&__text {
+		color: #9d9da6;
 	}
 
 	&__volume {
+		font-weight: 500;
+		color: #ffffff;
 	}
 }
