--- a/src/scss/media/_price_media.scss
+++ b/src/scss/media/_price_media.scss
@@ -1,13 +1,18 @@
-@media (any-hover: hover) {
-	
-}
-@media (max-width: 1199.98px) {
-}
 @media (max-width: 991.98px) {
+	.price {
+		&__row {
+			flex-wrap: wrap;
+		}
+		&__column {
+			flex: 0 0 50%;
+			@include adaptiv-value("margin-bottom", 40, 20, 0);
+		}
+	}
 }
-
-@media (max-width: 767.98px) {
-}
-
 @media (max-width: 575.98px) {
+	.price {
+		&__column {
+			flex: 0 0 100%;
+		}
+	}
 }
