--- a/src/scss/base/_btn.scss
+++ b/src/scss/base/_btn.scss
@@ -1,43 +1,19 @@
 .btn {
-	display: inline-block;
-	padding: 0px 35px;
-	height: 47px;
-	line-height: 44px;
-	transition: 0.5s all;
-	text-transform: uppercase;
-	letter-spacing: 0.67px;
-	position: relative;
-	border: 1px solid #000;
-	color: #000;
-	&::after {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		transform: scale(0);
-		transition: 0.5s all;
-		background-color: #000;
-	}
-	&-w {
-		border: 1px solid #fff;
-		color: #ffffff;
-		&::after {
-			background-color: #fff;
-		}
-	}
-	span {
-		position: relative;
-		z-index: 2;
-	}
-	&:hover {
-		color:#fff;
-		&.btn-w {
-			color: #000;
-		}
-		&:after {
-			transform: scale(1);
+	background-color: #6f55eb;
+	box-shadow: 0px 16px 28px 0px rgba(40, 31, 84, 0.21);
+	border-radius: 35px;
+	@include adaptiv-value("padding-top", 18, 9, 0);
+	@include adaptiv-value("padding-right", 37, 17, 0);
+	@include adaptiv-value("padding-bottom", 18, 9, 0);
+	@include adaptiv-value("padding-left", 37, 17, 0);
+	font-weight: 600;
+	color: #fefefe;
+	transition: all 0.3s ease-in;
+	transform: scale(1);
+	@media (any-hover: hover) {
+		&:hover {
+			box-shadow: 0px 25px 30px 0px rgba(67, 39, 207, 0.21);
+			transform: scale(1.05);
 		}
 	}
 }
