--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "base/fonts";
 @import "base/mixins";
 @import "base/links";
+@import "base/btn";
 
 * {
 	font-family: "Poppins", sans-serif;
@@ -29,14 +30,29 @@ body.lock {
 	line-height: 131.25%;
 	color: #2f2f33;
 	text-align: center;
+	&-w {
+		color: #ffffff;
+	}
+}
+
+.text {
+	line-height: 162.5%;
+	color: #9b9b9e;
+	max-width: 780px;
+	margin: 0px auto;
+	&-w {
+		color: #ffffff;
+	}
 }
 
 @import "blocks/header";
 @import "blocks/intro";
 @import "blocks/price";
+@import "blocks/promotions";
 @import "blocks/footer";
 
 @import "media/header_media";
 @import "media/intro_media";
 @import "media/price_media";
+@import "media/promotions_media";
 @import "media/footer_media";
