--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,7 +29,6 @@ body.lock {
 	@include adaptiv-value("font-size", 32, 24, 0);
 	line-height: 131.25%;
 	color: #2f2f33;
-	text-align: center;
 	&-w {
 		color: #ffffff;
 	}
@@ -49,10 +48,12 @@ body.lock {
 @import "blocks/intro";
 @import "blocks/price";
 @import "blocks/promotions";
+@import "blocks/why";
 @import "blocks/footer";
 
 @import "media/header_media";
 @import "media/intro_media";
 @import "media/price_media";
 @import "media/promotions_media";
+@import "media/why_media";
 @import "media/footer_media";
