--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@ body.lock {
 @import "blocks/price";
 @import "blocks/promotions";
 @import "blocks/why";
+@import "blocks/roadmap";
 @import "blocks/footer";
 
 @import "media/header_media";
@@ -56,4 +57,5 @@ body.lock {
 @import "media/price_media";
 @import "media/promotions_media";
 @import "media/why_media";
+@import "media/roadmap_media";
 @import "media/footer_media";
