--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,6 +50,7 @@ body.lock {
 @import "blocks/promotions";
 @import "blocks/why";
 @import "blocks/roadmap";
+@import "blocks/timer";
 @import "blocks/footer";
 
 @import "media/header_media";
@@ -58,4 +59,5 @@ body.lock {
 @import "media/promotions_media";
 @import "media/why_media";
 @import "media/roadmap_media";
+@import "media/timer_media";
 @import "media/footer_media";
