--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,7 @@ body.lock {
 @import "blocks/why";
 @import "blocks/roadmap";
 @import "blocks/timer";
+@import "blocks/started";
 @import "blocks/footer";
 
 @import "media/header_media";
@@ -60,4 +61,5 @@ body.lock {
 @import "media/why_media";
 @import "media/roadmap_media";
 @import "media/timer_media";
+@import "media/started_media";
 @import "media/footer_media";
