--- a/src/scss/base/_btn.scss
+++ b/src/scss/base/_btn.scss
@@ -10,6 +10,11 @@
 	color: #fefefe;
 	transition: all 0.3s ease-in;
 	transform: scale(1);
+	&-w {
+		background-color: #ffffff;
+		box-shadow: 0px 16px 28px 0px rgba(37, 8, 116, 0.21);
+		color: #2f2f33;
+	}
 	@media (any-hover: hover) {
 		&:hover {
 			box-shadow: 0px 25px 30px 0px rgba(67, 39, 207, 0.21);
