--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,6 +52,7 @@ body.lock {
 @import "blocks/roadmap";
 @import "blocks/timer";
 @import "blocks/started";
+@import "blocks/news";
 @import "blocks/footer";
 
 @import "media/header_media";
@@ -62,4 +63,5 @@ body.lock {
 @import "media/roadmap_media";
 @import "media/timer_media";
 @import "media/started_media";
+@import "media/news_media";
 @import "media/footer_media";
