--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -53,6 +53,7 @@ body.lock {
 @import "blocks/timer";
 @import "blocks/started";
 @import "blocks/news";
+@import "blocks/digital";
 @import "blocks/footer";
 
 @import "media/header_media";
