--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,14 +1,5 @@
 .footer {
 	@include adaptiv-value("padding-bottom", 130, 40, 0);
-	&__container {
-	}
-
-	&__top {
-	}
-	&__bottom {
-	}
-	&__menu {
-	}
 }
 .top-footer {
 	display: flex;
@@ -33,12 +24,6 @@
 			margin: 0px 0px 0px 5px;
 			color: #2f2f33;
 		}
-	}
-
-	&__img {
-	}
-
-	&__text {
 	}
 }
 .menu-footer {
@@ -106,12 +91,6 @@
 	display: flex;
 	justify-content: space-between;
 	@include adaptiv-value("padding-top", 50, 25, 0);
-	&__column {
-	}
-
-	&__nav {
-	}
-
 	&__rights {
 		font-size: 14px;
 		color: #9b9b9e;
@@ -127,18 +106,11 @@
 			@include adaptiv-value("margin-right", 100, 30, 0);
 		}
 	}
-
-	&__body {
-	}
-
 	&__title {
 		@include adaptiv-value("font-size", 18, 16, 0);
 		font-weight: 600;
 		color: #2f2f33;
 		@include adaptiv-value("margin-bottom", 40, 20, 0);
-	}
-
-	&__list {
 	}
 
 	&__item {
@@ -150,29 +122,28 @@
 		color: #9b9b9e;
 	}
 }
-.nav-footer.init .nav-footer__title {
+.nav-footer__body.init .nav-footer__title {
 	cursor: pointer;
 	@include adaptiv-value("padding-top", 10, 5, 0);
 	@include adaptiv-value("padding-right", 40, 10, 0);
 	@include adaptiv-value("padding-bottom", 10, 5, 0);
 	@include adaptiv-value("padding-left", 10, 5, 0);
-	&::before,
+	position: relative;
 	&::after {
 		content: "";
-		width: 20px;
-		height: 1px;
-		background-color: #000;
 		position: absolute;
+		border: solid #9b9b9e;
+		border-width: 0 1px 1px 0;
+		display: inline-block;
+		padding: 2px;
+		transform: rotate(45deg) translate(0, -50%);
 		right: 10px;
-		top: 20px;
-		transition: all 0.3s ease-in;
-	}
-	&::after {
-		transform: rotate(-90deg);
+		top: 50%;
+		transition: all 0.3s ease;
 	}
 	&.active {
 		&::after {
-			transform: rotate(0deg);
+			transform: rotate(-135deg);
 		}
 	}
 }
