--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -46,7 +46,7 @@
 	&__sublist {
 		transition: all 0.3s ease;
 		position: absolute;
-		top: 100%;
+		bottom: 100%;
 		right: 0;
 		padding: 15px 0;
 		min-width: 50px;
