--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -73,6 +73,7 @@
 			@include adaptiv-value("margin-right", 45, 20, 0);
 		}
 		position: relative;
+		
 	}
 	&__subitem {
 		&:not(:last-child) {
@@ -96,6 +97,21 @@
 			border-radius: 5px;
 			bottom: 0;
 			transition: all 0.3s ease;
+		}
+		&.active{
+			transition: all 0.3s ease;
+			&::before {
+				content: "";
+				position: absolute;
+				bottom: 0;
+				left: 50%;
+				width: 6px;
+				height: 6px;
+				background-color: #fff;
+				border-radius: 100%;
+				transition: all 0.3s ease;
+				transform: translate(-50%,0);
+			}
 		}
 	}
 	&__sublink {
